Bug 448492 - Re-login results in a black screen with mouse pointer
Summary: Re-login results in a black screen with mouse pointer
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.23.90
Platform: Arch Linux Linux
: VHI normal
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords: regression
: 448806 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-01-14 20:24 UTC by Patrick Silva
Modified: 2022-08-12 15:59 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-01-14 20:24:51 UTC
STEPS TO REPRODUCE
1. start Wayland session
2. logout
3. login to Wayland session again

OBSERVED RESULT
black screen with mouse pointer

EXPECTED RESULT
usable Plasma session

SOFTWARE/OS VERSIONS
SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.23.90
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2
Graphics Platform: Wayland
Comment 1 Nate Graham 2022-01-14 20:36:30 UTC
Can reproduce. It looks like plasmashell didn't start automatically. I can use krunner to launch `plasmashell` manually and then everything gets back to normal. The symptoms are identical to what I reported in 448475.
Comment 2 nyanpasu64 2022-01-20 15:50:24 UTC
Is this the same as Bug 448806? That one used systemd session, I'm not sure if this does.
Comment 3 Nate Graham 2022-01-20 16:25:32 UTC
Are you using the Systemd startup feature, Patrick?
Comment 4 Patrick Silva 2022-01-20 16:28:00 UTC
(In reply to Nate Graham from comment #3)
> Are you using the Systemd startup feature, Patrick?

yes
Comment 5 Nate Graham 2022-01-20 16:29:09 UTC
*** Bug 448806 has been marked as a duplicate of this bug. ***
Comment 6 Samuel Reddy 2022-01-21 02:13:01 UTC
This happens both on the Wayland and X11 sessions.
Comment 7 Bug Janitor Service 2022-01-25 10:46:06 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/1943
Comment 8 Bug Janitor Service 2022-01-25 22:20:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1403
Comment 9 David Edmundson 2022-01-26 22:35:19 UTC
Git commit 39ecc45e5bdf8cf167b7b128e2c3473069bd5119 by David Edmundson.
Committed on 26/01/2022 at 22:20.
Pushed by davidedmundson into branch 'master'.

[systemd] Fix logout issues

It is important that we end plasma-core.target plasma-workspace.target
and graphical-session.target when we log out. graphical-session in turn
closes all other apps and daemons and prevents restarts.
Handling it in systemd gives the least racey option.

graphical-session used to be hanlded in the plasma-ksmserver service
file, but this was removed in 5.24 in a refactor where it caused issues
for Xwayland restarting.

This patch reintroduces the sentinel programs to close down our target,
which in turn take down the other targets. It also removes a complicated
use of templates that in hindsight didn't really solve anything.

Testing done:
- logout of wayland shows all targets as inactive, logging in
repeatedly works smoothly
 - logout of X11 behaves the same.
- calling systemctl --user stop plasma-kwin_wayland.service closes the
session
 - killing ksmserver on wayland does not close the session
 - killing ksmserver on X does

M  +2    -2    startkde/startplasma.cpp
M  +3    -1    startkde/systemd/CMakeLists.txt
M  +1    -0    startkde/systemd/plasma-core.target
A  +4    -0    startkde/systemd/plasma-workspace-wayland.target
A  +4    -0    startkde/systemd/plasma-workspace-x11.target
A  +8    -0    startkde/systemd/plasma-workspace.target
D  +0    -6    startkde/systemd/plasma-workspace@.target

https://invent.kde.org/plasma/plasma-workspace/commit/39ecc45e5bdf8cf167b7b128e2c3473069bd5119
Comment 10 David Edmundson 2022-01-26 22:41:04 UTC
Git commit 022a91662541fd32e54cbfec371f08368f878fcf by David Edmundson.
Committed on 26/01/2022 at 22:40.
Pushed by davidedmundson into branch 'Plasma/5.24'.

[systemd] Fix logout issues

It is important that we end plasma-core.target plasma-workspace.target
and graphical-session.target when we log out. graphical-session in turn
closes all other apps and daemons and prevents restarts.
Handling it in systemd gives the least racey option.

graphical-session used to be hanlded in the plasma-ksmserver service
file, but this was removed in 5.24 in a refactor where it caused issues
for Xwayland restarting.

This patch reintroduces the sentinel programs to close down our target,
which in turn take down the other targets. It also removes a complicated
use of templates that in hindsight didn't really solve anything.

Testing done:
- logout of wayland shows all targets as inactive, logging in
repeatedly works smoothly
 - logout of X11 behaves the same.
- calling systemctl --user stop plasma-kwin_wayland.service closes the
session
 - killing ksmserver on wayland does not close the session
 - killing ksmserver on X does

(cherry picked from commit 39ecc45e5bdf8cf167b7b128e2c3473069bd5119)

M  +2    -2    startkde/startplasma.cpp
M  +4    -2    startkde/systemd/CMakeLists.txt
M  +1    -0    startkde/systemd/plasma-core.target
A  +4    -0    startkde/systemd/plasma-workspace-wayland.target
A  +4    -0    startkde/systemd/plasma-workspace-x11.target
A  +8    -0    startkde/systemd/plasma-workspace.target
D  +0    -6    startkde/systemd/plasma-workspace@.target

https://invent.kde.org/plasma/plasma-workspace/commit/022a91662541fd32e54cbfec371f08368f878fcf